--- a/AdofaiTweaks.Translation/AdofaiTweaks.Translation.csproj
+++ b/AdofaiTweaks.Translation/AdofaiTweaks.Translation.csproj
@@ -53,4 +53,7 @@
     <RemoveDir Directories="$(TargetDir)" />
     <RemoveDir Directories="$(ProjectDir)$(BaseIntermediateOutputPath)" />
   </Target>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net48" Version="1.0.3" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
